--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -37,7 +37,7 @@ rand = { workspace = true, optional = true }
 rand_pcg = { workspace = true, optional = true }
 rlp = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-serde = { features = ["alloc", "derive"], workspace = true }
+serde = { features = ["alloc", "derive"], workspace = true, default-features = false }
 
 # Polkadot SDK Dependencies
 bn = { workspace = true }
