--- a/substrate/utils/frame/benchmarking-cli/Cargo.toml
+++ b/substrate/utils/frame/benchmarking-cli/Cargo.toml
@@ -69,6 +69,7 @@ subxt = { workspace = true, features = ["native"] }
 subxt-signer = { workspace = true, features = ["unstable-eth"] }
 thiserror = { workspace = true }
 thousands = { workspace = true }
+json-patch = "1.0"
 
 [dev-dependencies]
 cumulus-test-runtime = { workspace = true, default-features = true }
